fix intro container too small

--- a/sites/game-client/intro-modal.css
+++ b/sites/game-client/intro-modal.css
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   text-align: center;
   width: 65vw;
-  height: 65vh;
+  max-height: 85vh;
   top: -20%;
   justify-content: space-between !important;
 }
